Sec49_Chap449-XXX: optimized test code